export default class DataSelectorManagerInterface {
  add (entity) {}
  set (entities) {}
  get() {}
  isChosen(entity) {}
}