export default class DensityManagerInterface {
  setDensity(density) {}
  getDensity() {}
}
