export default class ResetManagerInterface {
  reload() {}
}