export default class SortInterface {
  getSortedEntities (entities) {}
  by(field, reverse = null) {}
}