@startuml
interface ColumnManagerInterface
interface RenderManagerInterface
interface PaginationManagerInterface
interface DensityManagerInterface
interface ResetManagerInterface
interface SortInterface
interface DataSelectorManagerInterface

interface TableFacadeInterface {
  {abstract} getEntities(entities: T[]): T[]
  {abstract} getColumnManager (): ColumnManagerInterface
  {abstract} getRenderManager (): RenderManagerInterface
}
abstract class TableFacadeAbstract {
  {abstract} getPaginationManager(): PaginationManagerInterface
  {abstract} getDensityManager(): DensityManagerInterface
  {abstract} getResetManager(): ResetManagerInterface
  {abstract} getSortManager (): SortInterface
  {abstract} getChooseManager (): DataSelectorManagerInterface
}
TableFacadeAbstract .|> TableFacadeInterface
ColumnManagerInterface <--o TableFacadeAbstract
RenderManagerInterface <--o TableFacadeAbstract

TableFacadeAbstract --> PaginationManagerInterface
TableFacadeAbstract --> DensityManagerInterface
TableFacadeAbstract --> ResetManagerInterface
TableFacadeAbstract --> SortInterface
TableFacadeAbstract --> DataSelectorManagerInterface

@enduml
